--- a/spright-universe/src/index.css
+++ b/spright-universe/src/index.css
@@ -1,10 +1,11 @@
 :root{
-  --background: #000;
+  --background-1: #2E3035;
+  --background-2: #232428;
+  --background-3: #111214;
+  --background-4: #111;
 
   --color: #f0f8ff;
 
-  --background-btns: #1D1D1D;
-  --background-btns-hover: #0F0F0F;
   --link: #0079CC;
   --link-hover: #004b7c;
 }
@@ -17,19 +18,11 @@
 }
 
 body{
-  background-color: var(--background);
+  background-color: var(--background-1);
 }
 
-h1.main-title{
-  color: var(--color);
-}
-
-.landing-page{
-  width: 100%;
-  height: 100vh;
-}
-
-/* PAGES */
-.section-container{
-  background-color: #111;
+main {
+  gap: 50px;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
 }
