Update : `Home and Landing Page`

--- a/spright-universe/src/index.css
+++ b/spright-universe/src/index.css
@@ -1,3 +1,8 @@
+@font-face{
+  font-family: 'Critical Mass';
+  src: url("./public/font/critical-mass-ldr.ttf") format('truetype');
+}
+
 :root{
   --background-1: #2E3035;
   --background-2: #232428;
