--- a/spright-universe/src/components/pages/css/Home.module.css
+++ b/spright-universe/src/components/pages/css/Home.module.css
@@ -11,5 +11,71 @@ div.landing_page{
 }
 
 div.landing_page div.landing_page_panel{
-    background-image: linear-gradient(180deg, #8080803a, #000);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    background-image: linear-gradient(180deg, #0000003a, #000);
+}
+
+div.landing_page div.landing_page_panel .landing_title{
+    font-size: 2.2rem;
+    animation: rowColors 5.5s linear infinite;
+    font-family: 'Critical Mass';
+}
+
+div.landing_page_panel a{
+    margin: 20px 0;
+}
+
+@keyframes rowColors{
+    100%, 0%{
+        text-shadow: 1px 1px 10px #ff0000;
+    }
+    8%{
+        text-shadow: 1px 1px 10px #ff7f00;
+    }
+    16%{
+        text-shadow: 1px 1px 10px #ffff00;
+    }
+    25%{
+        text-shadow: 1px 1px 10px #7fff00;
+    }
+    33%{
+        text-shadow: 1px 1px 10px #00ff00;
+    }
+    41%{
+        text-shadow: 1px 1px 10px #00ff7f;
+    }
+    50%{
+        text-shadow: 1px 1px 10px #00ffff;
+    }
+    58%{
+        text-shadow: 1px 1px 10px #007fff;
+    }
+    66%{
+        text-shadow: 1px 1px 10px #0000ff;
+    }
+    75%{
+        text-shadow: 1px 1px 10px #7f00ff;
+    }
+    83%{
+        text-shadow: 1px 1px 10px #ff00ff;
+    }
+    91%{
+        text-shadow: 1px 1px 10px #ff007f;
+    }
+}
+
+@media screen and (max-width: 1024px){
+    div.landing_page div.landing_page_panel .landing_title{
+        text-align: center;
+        animation: rowColors 5.5s linear infinite;
+        font-family: 'Critical Mass';
+    }
+
+    div.landing_page_panel a img{
+        width: 100%;
+        height: 10vh;
+    }
 }
