--- a/spright-universe/src/components/layouts/css/SectionContainer.module.css
+++ b/spright-universe/src/components/layouts/css/SectionContainer.module.css
@@ -60,5 +60,13 @@ div.section_container_title aside i{
 }
 
 section div.section_container_body{
+    gap: 10px;
     padding: 10px;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    color: var(--color);
+}
+
+div.section_container_body p{
+    text-align: center;
 }
