--- a/spright-universe/src/components/layouts/css/SectionContainer.module.css
+++ b/spright-universe/src/components/layouts/css/SectionContainer.module.css
@@ -1,9 +1,11 @@
 .section_container{
-    background-color: var(--background-1);
+    background-color: #111111f7;
+    backdrop-filter: blur(5px);
 }
 
 section.section{
     gap: 10px;
+    padding: 50px 0;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
 }
