update : Info-World

--- a/spright-universe/src/components/layouts/css/FooterContainer.module.css
+++ b/spright-universe/src/components/layouts/css/FooterContainer.module.css
@@ -75,4 +75,8 @@ footer section.footer_copiright_content{
     section.footer_links_content aside{
         flex-direction: column;
     }
+
+    section.footer_links_content #helper{
+        font-size: 0.8rem;
+    }
 }
