update : `Report Page`

--- a/spright-universe/src/components/layouts/css/FooterContainer.module.css
+++ b/spright-universe/src/components/layouts/css/FooterContainer.module.css
@@ -78,5 +78,6 @@ footer section.footer_copiright_content{
 
     section.footer_links_content #helper{
         font-size: 0.8rem;
+        text-align: center;
     }
 }
