--- a/spright-universe/src/index.css
+++ b/spright-universe/src/index.css
@@ -8,11 +8,11 @@
   --background-2: #232428;
   --background-3: #111214;
   --background-4: #111;
-
   --color: #f0f8ff;
-
   --link: #0079CC;
   --link-hover: #004b7c;
+
+  --trans-03: 0.3s ease-in-out;
 }
 
 *{
@@ -41,4 +41,32 @@ ol li, ul li{
 
 form div{
   margin: 15px 0;
+}
+
+.section_container{
+  display: flex;
+  justify-content: center;
+}
+
+form{
+  display: flex;
+  flex-direction: column;
+}
+
+form div label{
+  width: 100%;
+}
+
+form div label{
+  gap: 10px;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+}
+
+form div label span{
+  font-weight: bolder;
+}
+
+input:focus, textarea:focus{
+  outline: none;
 }
