update : `Character Page`

--- a/spright-universe/src/index.css
+++ b/spright-universe/src/index.css
@@ -9,6 +9,7 @@
   --background-3: #111214;
   --background-4: #111;
   --color: #f0f8ff;
+  --color-2: #989898;
   --link: #0079CC;
   --link-hover: #004b7c;
 
